[gd_scene load_steps=5 format=3 uid="uid://pdpx8st0nn4s"]

[ext_resource type="Script" path="res://Smith.gd" id="1"]
[ext_resource type="Script" path="res://Needleman.gd" id="3"]
[ext_resource type="Script" path="res://Beteringhe.gd" id="4"]
[ext_resource type="Script" path="res://Star.gd" id="5"]

[node name="Main" type="Node2D"]

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.431373, 0.568627, 1)

[node name="SidePanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="SidePanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.14902, 0.227451, 0.290196, 1)

[node name="S1" type="LineEdit" parent="SidePanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 16.0
offset_right = 240.0
offset_bottom = 40.0
text = "CGTA"
placeholder_text = "Prima secventa"

[node name="S2" type="LineEdit" parent="SidePanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 48.0
offset_right = 240.0
offset_bottom = 72.0
text = "CTA"
placeholder_text = "A doua secventa"

[node name="P" type="LineEdit" parent="SidePanel"]
layout_mode = 0
offset_left = 173.0
offset_top = 80.0
offset_right = 240.063
offset_bottom = 111.0
text = "2"

[node name="Label" type="Label" parent="SidePanel/P"]
layout_mode = 0
offset_left = -104.0
offset_top = 8.0
offset_right = -50.0
offset_bottom = 22.0
text = "Potrivire"

[node name="N" type="LineEdit" parent="SidePanel"]
layout_mode = 0
offset_left = 173.0
offset_top = 120.0
offset_right = 240.063
offset_bottom = 151.0
text = "-2"

[node name="Label2" type="Label" parent="SidePanel/N"]
layout_mode = 0
offset_left = -112.0
offset_top = 8.0
offset_right = -40.0
offset_bottom = 22.0
text = "Nepotrivire"

[node name="G" type="LineEdit" parent="SidePanel"]
layout_mode = 0
offset_left = 173.0
offset_top = 160.0
offset_right = 240.063
offset_bottom = 191.0
text = "-3"

[node name="Label3" type="Label" parent="SidePanel/G"]
layout_mode = 0
offset_left = -88.0
offset_top = 8.0
offset_right = -63.0
offset_bottom = 22.0
text = "Gap"

[node name="CheckButton" type="CheckButton" parent="SidePanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 8.0
offset_right = 223.0
offset_bottom = 48.0
rotation = 89.5354
text = "Mod performant"

[node name="Calc" type="Button" parent="SidePanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 204.0
offset_right = 140.0
offset_bottom = 235.0
scale = Vector2(2, 2)
text = "Calculeaza"

[node name="TabContainer" type="TabContainer" parent="."]
self_modulate = Color(0.666667, 0.670588, 0.678431, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="Needleman" type="TabBar" parent="TabContainer"]
layout_mode = 2
script = ExtResource("3")

[node name="ItemList" type="ItemList" parent="TabContainer/Needleman"]
layout_mode = 0
offset_left = 60.0
offset_top = 24.0
offset_right = 380.0
offset_bottom = 281.0
auto_height = true
same_column_width = true

[node name="DL" type="Label" parent="TabContainer/Needleman"]
layout_mode = 0
offset_left = 444.0
offset_top = 64.0
offset_right = 484.0
offset_bottom = 78.0
scale = Vector2(2, 2)
text = "DL="

[node name="DH" type="Label" parent="TabContainer/Needleman"]
layout_mode = 0
offset_left = 444.0
offset_top = 112.0
offset_right = 484.0
offset_bottom = 126.0
scale = Vector2(2, 2)
text = "DH="

[node name="Show" type="Label" parent="TabContainer/Needleman"]
layout_mode = 0
offset_left = 4.0
offset_top = -8.0
offset_right = 448.0
offset_bottom = 408.0
uppercase = true

[node name="Seq1" type="Label" parent="TabContainer/Needleman"]
layout_mode = 0
offset_left = 444.0
offset_top = 152.0
offset_right = 484.0
offset_bottom = 166.0
scale = Vector2(2, 2)

[node name="Seq2" type="Label" parent="TabContainer/Needleman"]
layout_mode = 0
offset_left = 444.0
offset_top = 200.0
offset_right = 484.0
offset_bottom = 222.0
scale = Vector2(2, 2)

[node name="Smith" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("1")

[node name="ItemList" type="ItemList" parent="TabContainer/Smith"]
layout_mode = 0
offset_left = 60.0
offset_top = 50.0
offset_right = 380.0
offset_bottom = 306.0
auto_height = true
same_column_width = true

[node name="DL" type="Label" parent="TabContainer/Smith"]
layout_mode = 0
offset_left = 444.0
offset_top = 64.0
offset_right = 484.0
offset_bottom = 78.0
scale = Vector2(2, 2)
text = "DL="

[node name="DH" type="Label" parent="TabContainer/Smith"]
layout_mode = 0
offset_left = 444.0
offset_top = 112.0
offset_right = 484.0
offset_bottom = 126.0
scale = Vector2(2, 2)
text = "DH="

[node name="Show" type="Label" parent="TabContainer/Smith"]
layout_mode = 0
offset_left = 4.0
offset_top = -8.0
offset_right = 448.0
offset_bottom = 408.0
uppercase = true

[node name="GridContainer" type="GridContainer" parent="TabContainer/Smith"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Seq1" type="Label" parent="TabContainer/Smith"]
layout_mode = 0
offset_left = 444.0
offset_top = 152.0
offset_right = 484.0
offset_bottom = 174.0
scale = Vector2(2, 2)

[node name="Seq2" type="Label" parent="TabContainer/Smith"]
layout_mode = 0
offset_left = 444.0
offset_top = 200.0
offset_right = 484.0
offset_bottom = 222.0
scale = Vector2(2, 2)

[node name="Beteringhe" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("4")

[node name="ItemList" type="ItemList" parent="TabContainer/Beteringhe"]
layout_mode = 0
offset_left = 60.0
offset_top = 55.0
offset_right = 380.0
offset_bottom = 311.0
auto_height = true
same_column_width = true

[node name="DL" type="Label" parent="TabContainer/Beteringhe"]
layout_mode = 0
offset_left = 444.0
offset_top = 64.0
offset_right = 484.0
offset_bottom = 78.0
scale = Vector2(2, 2)
text = "DL="

[node name="DH" type="Label" parent="TabContainer/Beteringhe"]
layout_mode = 0
offset_left = 444.0
offset_top = 112.0
offset_right = 484.0
offset_bottom = 126.0
scale = Vector2(2, 2)
text = "DH="

[node name="Show" type="Label" parent="TabContainer/Beteringhe"]
layout_mode = 0
offset_left = 4.0
offset_top = -8.0
offset_right = 448.0
offset_bottom = 408.0
uppercase = true

[node name="GridContainer" type="GridContainer" parent="TabContainer/Beteringhe"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Seq1" type="Label" parent="TabContainer/Beteringhe"]
layout_mode = 0
offset_left = 444.0
offset_top = 152.0
offset_right = 484.0
offset_bottom = 174.0
scale = Vector2(2, 2)

[node name="Seq2" type="Label" parent="TabContainer/Beteringhe"]
layout_mode = 0
offset_left = 444.0
offset_top = 200.0
offset_right = 484.0
offset_bottom = 222.0
scale = Vector2(2, 2)

[node name="Star" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("5")

[node name="ItemList" type="ItemList" parent="TabContainer/Star"]
layout_mode = 0
offset_left = 60.0
offset_top = 54.0
offset_right = 380.0
offset_bottom = 310.0
auto_height = true
same_column_width = true

[node name="Show" type="Label" parent="TabContainer/Star"]
layout_mode = 0
offset_right = 188.0
offset_bottom = 144.0

[node name="Control" type="Control" parent="TabContainer/Star"]
anchors_preset = 0
offset_left = 312.0
offset_top = 128.0
offset_right = 352.0
offset_bottom = 168.0

[node name="Line2D" type="Line2D" parent="TabContainer/Star/Control"]
points = PackedVector2Array(124, 152, 508, 152, 132, 400, 316, 32, 508, 400, 132, 160)
default_color = Color(0, 0, 0, 1)
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Label" type="Label" parent="TabContainer/Star/Control"]
layout_mode = 0
offset_left = 300.0
offset_top = 200.0
offset_right = 340.0
offset_bottom = 222.0
text = "1"

[node name="Label2" type="Label" parent="TabContainer/Star/Control"]
layout_mode = 0
offset_left = 116.0
offset_top = 144.0
offset_right = 156.0
offset_bottom = 166.0
text = "2"

[node name="Label3" type="Label" parent="TabContainer/Star/Control"]
layout_mode = 0
offset_left = 500.0
offset_top = 144.0
offset_right = 540.0
offset_bottom = 166.0
text = "3"

[node name="Label4" type="Label" parent="TabContainer/Star/Control"]
layout_mode = 0
offset_left = 124.0
offset_top = 384.0
offset_right = 164.0
offset_bottom = 406.0
text = "4"

[node name="Label5" type="Label" parent="TabContainer/Star/Control"]
layout_mode = 0
offset_left = 300.0
offset_top = 24.0
offset_right = 340.0
offset_bottom = 46.0
text = "5"

[node name="Label6" type="Label" parent="TabContainer/Star/Control"]
layout_mode = 0
offset_left = 492.0
offset_top = 384.0
offset_right = 532.0
offset_bottom = 406.0
text = "6"

[connection signal="pressed" from="SidePanel/CheckButton" to="TabContainer/Needleman" method="_on_CheckButton_pressed"]
[connection signal="pressed" from="SidePanel/CheckButton" to="TabContainer/Smith" method="_on_CheckButton_pressed"]
[connection signal="pressed" from="SidePanel/CheckButton" to="TabContainer/Beteringhe" method="_on_CheckButton_pressed"]
[connection signal="pressed" from="SidePanel/Calc" to="TabContainer/Needleman" method="_on_Calc_pressed"]
[connection signal="pressed" from="SidePanel/Calc" to="TabContainer/Smith" method="_on_Calc_pressed"]
[connection signal="pressed" from="SidePanel/Calc" to="TabContainer/Beteringhe" method="_on_Calc_pressed"]
[connection signal="pressed" from="SidePanel/Calc" to="TabContainer/Star" method="_on_Calc_pressed"]
